# valere

./: .gitignore  README.md  pyproject.toml
datasets/: README.md
datasets/d4-split-compiler-contamination-control/: README.md
evaluation/: README.md
evaluation/attacks/: README.md
evaluation/f2-semantic-grader-reward-composer/: README.md
evaluation/qualification/: README.md
evaluation/validators/: README.md
harness/: README.md
harness/e1-runtime-lifecycle-manager/: README.md
harness/e2-tool-gateway/: README.md
harness/e3-counterparty-qa-simulator/: README.md
harness/e4-tenant-security-fabric/: README.md
matter/: README.md  __init__.py  ingestion.py  issues.py  rendering.py  state.py
matter/c1-canonical-matter-deal-graph/: README.md
matter/c2-issue-counterfactual-generator/: README.md
matter/c3-document-vdr-renderer/: README.md
matter/c4-ingestion-evidence-graph-builder/: README.md
matter/cli/: __init__.py
matter/compiler/: __init__.py  document_world.py
registry/: README.md
sandbox/: README.md
scope/: README.md  __init__.py  authority.py  catalog.py  cli.py  common.py  compiler.py  demo.py  errors.py  governance.py  io.py  manifest.py  rights.py
tasks/: README.md  __init__.py
tests/: test_architecture.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py
training/: README.md
truth/: README.md  __init__.py  authority.py  cli.py  common.py  compiler.py  demo.py  errors.py  ontology.py  rules.py  sources.py
utils/: README.md  __init__.py  artifacts.py  catalogs.py  cli.py  errors.py  pov.py  values.py
(+30 files in other folders)
