[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "valere-boundary"
version = "0.1.0"
description = "Executable Phase 0 boundary, rights, governance, and authority controls"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0,<7"]

[project.scripts]
valere-boundary = "scope.cli:main"

[tool.setuptools]
packages = ["scope"]

[tool.uv]
package = true
