[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "valere-boundary"
version = "0.1.0"
description = "Executable legal-AI boundary, truth, authority, ontology, and policy controls"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0,<7"]

[project.scripts]
valere-boundary = "scope.cli:main"
valere-truth = "truth.cli:main"
valere-matter = "matter.cli:main"

[tool.setuptools]
packages = ["matter", "matter.cli", "matter.compiler", "scope", "scope.cli", "scope.compiler", "scope.configs", "tasks", "tasks.compiler", "truth", "utils"]

[tool.setuptools.package-data]
scope = ["configs/*.md", "configs/*.yaml"]

[tool.uv]
package = true
